--- a/main.html
+++ b/main.html
@@ -7,7 +7,30 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form method="post">
+	<label for="name">Name*</label>
+	<input type="text"  id="name" placeholder="Name" required><br>
+	<label for="email">Email*</label>
+	<input type="email"  id="email" placeholder="Email" required><br>
+	<label for="gender_m">male*</label>
+	<input type="radio"  id="gender_m" name="gender" required>
+	<label for="gender_f">female*</label>
+	<input type="radio"  id="gender_f" name="gender" required><br>
+	<label for="cars">Car Brands</label>
+	<select id="cars">
+		<option>Apple</option>
+		<option>Asus</option>
+		<option>HP</option>
+	</select><br>
+	<label for="carage">Age*</label>
+	<input type="number"  id="carage"  required><br>
+	<label for="dop">DOB*</label>
+	<input type="date"  id="dop"  required><br>
+	<label for="password">Password*</label>
+	<input type="Password"  id="password" placeholder="password" required><br>
+	<label for="submit">Submit</label>
+	<input value="Submit" type="submit" id="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
