--- a/main.html
+++ b/main.html
@@ -28,8 +28,7 @@
 	<input type="date"  id="dop"  required><br>
 	<label for="password">Password*</label>
 	<input type="Password"  id="password" placeholder="password" required><br>
-	<label for="submit">Submit</label>
-	<input value="Submit" type="submit" id="submit">
+	<button type="submit">Submit</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
